@@ -1,3 +1,9 @@
+2008-08-18  Sam Steingold  <sds@gnu.org>
+
+	* modules/syscalls/calls.c: make sure that end_system_call() is
+	called before all errors and that
+	errno is only accessed inside begin_system_call/end_system_call
+
 2008-08-17  Sam Steingold  <sds@gnu.org>
 
 	* modules/syscalls/calls.c (path_truncate, stream_truncate): call
